Add task-runner to app

--- a/index.html
+++ b/index.html
@@ -1,104 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>My first website</title>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Open+Sans:ital,wght@1,500&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header class="splash">
-            <div class="splash-inner">
-                <div class="container"> <!-- element container ogranicza szerokość treści w sekcji -->
-                    <i class="fa-solid fa-snowflake"></i>   <!--dodanie logo -->
-                    <h1 class="page-title">Hi, I'm Jakub Sadowski.</h1>
-                    <h2 class="page-subtitle">Beginner Web Developer</h2>
-                </div>            
+  <head>
+    <meta charset="utf-8">
+    <title>My first website</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Open+Sans:ital,wght@1,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <header class="splash">
+      <div class="splash-inner">
+        <div class="container"> <!-- element container ogranicza szerokość treści w sekcji -->
+          <i class="fa-solid fa-snowflake"></i>   <!--dodanie logo -->
+          <h1 class="page-title">Hi, I'm Jakub Sadowski.</h1>
+          <h2 class="page-subtitle">Beginner Web Developer</h2>
+        </div>
+      </div>
+    </header>
+    <section class="intro">
+      <div class="container">
+        <p>Lorem ipsum</p>
+      </div>
+    </section>
+    <section class="about">
+      <div class="container">
+        <h2 class="section-title">Hello world!</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lacus vitae mi viverra ornare. Morbi sodales ac sapien eget auctor. Vestibulum dictum tortor ultrices hendrerit placerat. Pellentesque in dictum quam. Vestibulum cursus venenatis justo sit amet volutpat. Donec ultricies quis nunc pretium condimentum. Duis consequat diam diam, vitae pulvinar lacus dapibus ut. Curabitur enim purus, viverra id rutrum at, mollis a nulla. Nulla eu ipsum vestibulum, tempor ipsum mattis, viverra leo. Aliquam auctor vestibulum nisl, ut dignissim massa vulputate nec.</p>
+      </div>
+    </section>
+    <section class="skills">
+      <div class="container">
+        <h2 class="section-title">What I do</h2>
+        <ul>    <!-- lista zawierająca zdjęcia i opisy -->
+          <li class="skill left">
+            <div class="skill-image">
+              <img src="https://i.postimg.cc/MG3XcZrn/pexels-esra-korkmaz-13814635.jpg" alt="image">
             </div>
-        </header>        
-        <section class="intro">
-                <div class="container">
-                    <p>Lorem ipsum</p>
-                </div>
-        </section>
-        <section class="about">
-            <div class="container">
-                <h2 class="section-title">Hello world!</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lacus vitae mi viverra ornare. Morbi sodales ac sapien eget auctor. Vestibulum dictum tortor ultrices hendrerit placerat. Pellentesque in dictum quam. Vestibulum cursus venenatis justo sit amet volutpat. Donec ultricies quis nunc pretium condimentum. Duis consequat diam diam, vitae pulvinar lacus dapibus ut. Curabitur enim purus, viverra id rutrum at, mollis a nulla. Nulla eu ipsum vestibulum, tempor ipsum mattis, viverra leo. Aliquam auctor vestibulum nisl, ut dignissim massa vulputate nec.</p>
+            <div class="skill-description">
+              <h3 class="skill-title">Football</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lacus vitae mi viverra ornare. Morbi sodales ac sapien eget auctor.</p>
             </div>
-        </section>
-        <section class="skills">
-            <div class="container">
-                <h2 class="section-title">What I do</h2>
-                <ul>    <!-- lista zawierająca zdjęcia i opisy -->
-                    <li class="skill left">
-                        <div class="skill-image">
-                            <img src="https://i.postimg.cc/MG3XcZrn/pexels-esra-korkmaz-13814635.jpg" alt="image">
-                        </div>
-                        <div class="skill-description">
-                            <h3 class="skill-title">Football</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lacus vitae mi viverra ornare. Morbi sodales ac sapien eget auctor.</p>
-                        </div>
-                    </li>
-                    <li class="skill right">
-                        <div class="skill-image">
-                            <img src="https://i.postimg.cc/7YrhJWXn/pexels-eugene-golovesov-14003122.jpg" alt="image">
-                        </div>
-                        <div class="skill-description">
-                            <h3 class="skill-title">Math</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lacus vitae mi viverra ornare. Morbi sodales ac sapien eget auctor.</p>
-                        </div>
-                    </li>
-                    <li class="skill left">
-                        <div class="skill-image">
-                            <img src="https://i.postimg.cc/2jZ36Dd5/pexels-paige-thompson-13990668.jpg" alt="image">
-                        </div>
-                        <div class="skill-description">
-                            <h3 class="skill-title">Gardening</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lacus vitae mi viverra ornare. Morbi sodales ac sapien eget auctor.</p>
-                        </div>
-                    </li>
-                </ul>
+          </li>
+          <li class="skill right">
+            <div class="skill-image">
+              <img src="https://i.postimg.cc/7YrhJWXn/pexels-eugene-golovesov-14003122.jpg" alt="image">
             </div>
-        </section>
-        <section class="portfolio">
-            <h2 class="section-title">Portfolio</h2>
-            <ul class="row">
-                <li>
-                    <div class="portfolio-image">
-                        <img src="https://i.postimg.cc/MG3XcZrn/pexels-esra-korkmaz-13814635.jpg" alt="image" class="button">
-                    </div>
-                </li>
-                <li>
-                    <div class="portfolio-image">
-                        <img src="https://i.postimg.cc/7YrhJWXn/pexels-eugene-golovesov-14003122.jpg" alt="image" class="button">
-                    </div>
-                </li>
-                <li>
-                    <div class="portfolio-image">
-                        <img src="https://i.postimg.cc/2jZ36Dd5/pexels-paige-thompson-13990668.jpg" alt="image" class="button">
-                    </div>
-                </li>
-                 <li>
-                    <div class="portfolio-image">
-                        <img src="https://i.postimg.cc/2jZ36Dd5/pexels-paige-thompson-13990668.jpg" alt="image" class="button">
-                    </div>
-                </li>
-                <li>
-                    <div class="portfolio-image">
-                        <img src="https://i.postimg.cc/MG3XcZrn/pexels-esra-korkmaz-13814635.jpg" alt="image" class="button">
-                    </div>
-                </li>
-                 <li>
-                    <div class="portfolio-image">
-                        <img src="https://i.postimg.cc/7YrhJWXn/pexels-eugene-golovesov-14003122.jpg" alt="image" class="button">
-                    </div>
-                </li>
-            </ul>
-        </section>
-        <section class="contact">
-            <h2 class="section-title">Contact</h2>
-        </section>
-    </body>
+            <div class="skill-description">
+              <h3 class="skill-title">Math</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lacus vitae mi viverra ornare. Morbi sodales ac sapien eget auctor.</p>
+            </div>
+          </li>
+          <li class="skill left">
+            <div class="skill-image">
+              <img src="https://i.postimg.cc/2jZ36Dd5/pexels-paige-thompson-13990668.jpg" alt="image">
+            </div>
+            <div class="skill-description">
+              <h3 class="skill-title">Gardening</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lacus vitae mi viverra ornare. Morbi sodales ac sapien eget auctor.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="portfolio">
+      <h2 class="section-title">Portfolio</h2>
+      <ul class="row">
+        <li>
+          <div class="portfolio-image">
+            <img src="https://i.postimg.cc/MG3XcZrn/pexels-esra-korkmaz-13814635.jpg" alt="image" class="button">
+          </div>
+        </li>
+        <li>
+          <div class="portfolio-image">
+            <img src="https://i.postimg.cc/7YrhJWXn/pexels-eugene-golovesov-14003122.jpg" alt="image" class="button">
+          </div>
+        </li>
+        <li>
+          <div class="portfolio-image">
+            <img src="https://i.postimg.cc/2jZ36Dd5/pexels-paige-thompson-13990668.jpg" alt="image" class="button">
+          </div>
+        </li>
+        <li>
+          <div class="portfolio-image">
+            <img src="https://i.postimg.cc/2jZ36Dd5/pexels-paige-thompson-13990668.jpg" alt="image" class="button">
+          </div>
+        </li>
+        <li>
+          <div class="portfolio-image">
+            <img src="https://i.postimg.cc/MG3XcZrn/pexels-esra-korkmaz-13814635.jpg" alt="image" class="button">
+          </div>
+        </li>
+        <li>
+          <div class="portfolio-image">
+            <img src="https://i.postimg.cc/7YrhJWXn/pexels-eugene-golovesov-14003122.jpg" alt="image" class="button">
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section class="contact">
+      <h2 class="section-title">Contact</h2>
+    </section>
+  </body>
 </html>    
