--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>My first website</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Open+Sans:ital,wght@1,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"> <!-- wykorzystanie zestawu ikon Font Awesome -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Open+Sans:ital,wght@1,500&display=swap"> <!-- wykorzystanie zestawu czcionek -->
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="splash">
+    <header class="splash"> <!-- główny nagłówek -->
       <div class="splash-inner">
         <div class="container"> <!-- element container ogranicza szerokość treści w sekcji -->
           <i class="fa-solid fa-snowflake"></i>   <!--dodanie logo -->
@@ -17,18 +17,18 @@
         </div>
       </div>
     </header>
-    <section class="intro">
+    <section class="intro"> <!-- sekcja powitalna -->
       <div class="container">
         <p>Lorem ipsum</p>
       </div>
     </section>
-    <section class="about">
+    <section class="about"> <!-- nagłówek z tekstem -->
       <div class="container">
         <h2 class="section-title">Hello world!</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lacus vitae mi viverra ornare. Morbi sodales ac sapien eget auctor. Vestibulum dictum tortor ultrices hendrerit placerat. Pellentesque in dictum quam. Vestibulum cursus venenatis justo sit amet volutpat. Donec ultricies quis nunc pretium condimentum. Duis consequat diam diam, vitae pulvinar lacus dapibus ut. Curabitur enim purus, viverra id rutrum at, mollis a nulla. Nulla eu ipsum vestibulum, tempor ipsum mattis, viverra leo. Aliquam auctor vestibulum nisl, ut dignissim massa vulputate nec.</p>
       </div>
     </section>
-    <section class="skills">
+    <section class="skills"> <!-- sekcja z naprzemiennie występującymi obrazkami i tekstem -->
       <div class="container">
         <h2 class="section-title">What I do</h2>
         <ul>    <!-- lista zawierająca zdjęcia i opisy -->
@@ -62,7 +62,7 @@
         </ul>
       </div>
     </section>
-    <section class="portfolio">
+    <section class="portfolio"> <!-- galeria -->
       <h2 class="section-title">Portfolio</h2>
       <ul class="row">
         <li>
@@ -97,8 +97,8 @@
         </li>
       </ul>
     </section>
-    <section class="contact">
+    <section class="contact"> <!-- formularz kontaktowy -->
       <h2 class="section-title">Contact</h2>
     </section>
   </body>
-</html>    
+</html>
